--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,11 @@
 version: '3.1'
   
 services:
-  web:
+  gitlab:
     image: 'gitlab/gitlab-ce:11.9.8-ce.0'
     restart: always
-    hostname: $HOSTNAME
-    environment:
-      GITLAB_OMNIBUS_CONFIG: |
-        external_url $EXTERNAL_URL
+    hostname: gitlab
+    container_name: gitlab
     ports:
       - '80:80'
       - '443:443'
