--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,18 @@
 version: '3'
-
-services:
+services:    
   gitlab:
-    image: ${IMAGE}
+    image: 'gitlab/gitlab-ce:latest'
     restart: always
-    hostname: ${HOSTNAME}
-    container_name: gitlab
-    #environment:
-    #  GITLAB_OMNIBUS_CONFIG: |
-    #    external_url 'http://gitlab.example.com:8929'
-    #    gitlab_rails['gitlab_shell_ssh_port'] = 2224
-    #ports:
-    #  - '8929:8929'
-    #  - '2224:22'
+    hostname: 'gitlab.example.com'
+    environment:
+        GITLAB_OMNIBUS_CONFIG: |
+        external_url 'https://gitlab.example.com'
+        # Add any other gitlab.rb configuration here, each on its own line
     ports:
-      - '80:80'
-      - '22:22'
-      - '443:443'
+        - '80:80'
+        - '443:443'
+        - '22:22'
     volumes:
-      - './srv/gitlab/config:/etc/gitlab'
-      - './srv/gitlab/logs:/var/log/gitlab'
-      - './srv/gitlab/data:/var/opt/gitlab'
-
+        - '/srv/gitlab/config:/etc/gitlab'
+        - '/srv/gitlab/logs:/var/log/gitlab'
+        - '/srv/gitlab/data:/var/opt/gitlab'
