--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: '3'
 services:
   web:
-    image: 'gitlab/gitlab-ee:13.12.6-ee.0'
+    image: 'gitlab/gitlab-ee:14.0.2-ee.0'
     restart: always
-    hostname: 'gitlab'
+    hostname: '192.168.5.98'
     environment:
       GITLAB_OMNIBUS_CONFIG: |
-        external_url 'https://127.0.0.1'
+        external_url 'https://192.168.5.98'
         # Add any other gitlab.rb configuration here, each on its own line
     ports:
       - '80:80'
